changed qr code

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <div class="collumns row">
                     <div class="collumn col-md-4">
                         <div class="head"><span class="headline hl3">FBI warns on scammers</span>
-                            <p><span class="headline hl4">by pr</span></p>
+                            <p><span class="headline hl4">by Agent Owl</span></p>
                         </div>
                        <p>
-                        FBI warns on scammers using cryptocurrency ATMs, QR codes to steal money. <strong>Stay away from QR codes</strong>, stay safe.
+                       <strong>Mech square: </strong> FBI warns on scammers using cryptocurrency ATMs, QR codes to steal money. <strong>Stay away from QR codes</strong>, stay safe.
                        </p>
                     </div>
                     <div class="collumn col-md-4">
