--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         </div>
                        <p>
                        <strong>Mech square: </strong> FBI warns on scammers using cryptocurrency ATMs, QR codes to steal money. <strong>Stay away from QR codes</strong>, stay safe.
+                       For safety guidelines visit <i><a href="https://www.instagram.com/_athena22_/?hl=en" style="color:black;text-decoration:none;">_athena22_</a></i> 
                        </p>
                     </div>
                     <div class="collumn col-md-4">
