--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                        <p>
                        <strong>Mech square: </strong> FBI warns on scammers using cryptocurrency ATMs, QR codes to steal money. <strong>Stay away from QR codes</strong>, stay safe.
-                       For safety guidelines visit <i><a href="https://www.instagram.com/_athena22_/?hl=en" style="color:black;text-decoration:none;">_athena22_</a></i> 
+                       For safety and guidelines visit our agent profile <i><a href="https://www.instagram.com/_athena22_/?hl=en" style="color:black;text-decoration:none;">_athena22_</a></i> 
                        </p>
                     </div>
                     <div class="collumn col-md-4">
@@ -45,7 +45,7 @@
                             <p><span class="headline hl6"><button class="btn btn-outline-secondary">Register Now</button></span></p>
                         </div>
                         <p class="text-justify">
-                        Your hunt begin at <strong>4:30pm</strong>. Keep an eye for the clues
+                        Your hunt begin at <strong>4:30pm</strong>. Keep an eye for the clues in the agent's profile
                         </p>
                         <figure class="figure mx-auto d-block w-100">
                             <img class="media" src="./clue.gif" alt="">
